fixed page shift

--- a/src/app/static/base.css
+++ b/src/app/static/base.css
@@ -176,3 +176,36 @@ header {
     border-color: var(--gradient-colour-one);
   }
 }
+
+
+/* ======================= SCROLL EFFECT ======================= */
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(100%);
+  transition: all 1s;
+  position: absolute;
+}
+
+.show {
+  visibility: visible;
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+  position: static;
+}
+
+.hidden-delay:nth-child(2) {
+  transition-delay: 100ms;
+}
+
+.hidden-delay:nth-child(3) {
+  transition-delay: 200ms;
+}
+
+@media (prefers-reduced-motion) {
+  .hidden {
+    transition: none;
+  }
+}
